Change theme to Academic

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -22,8 +22,7 @@
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
-<p class="credits theme-by text-muted">
-          {{ i18n "poweredBy" . | safeHTML }}
+<p class="powered-by">          
           {{ if $.GitInfo }}&nbsp;&bull;&nbsp;[<a href="{{ .Site.Params.commit }}{{ .GitInfo.Hash }}">{{ substr .GitInfo.Hash 0 8 }}</a>]{{ end }}
         </p>
     {{ if not (in (slice "docs" "updates") .Type) }}
