Change theme to Academic

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -19,9 +19,8 @@
   {{ partial "site_footer_license" . }}
 
   <p class="powered-by">
-    Powered by the
-    <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
-    <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
+    Powered by <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>
+	and the <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for.
 <p class="powered-by">          
           {{ if $.GitInfo }}&nbsp;&bull;&nbsp;[<a href="{{ .Site.Params.commit }}{{ .GitInfo.Hash }}">{{ substr .GitInfo.Hash 0 8 }}</a>]{{ end }}
         </p>
