Change theme to Academic

--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -18,11 +18,10 @@
   {{/* Display copyright license. */}}
   {{ partial "site_footer_license" . }}
 
-  <p class="powered-by">
-    Powered by <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>
-	and the <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for.
+  
 <p class="powered-by">          
-          {{ if $.GitInfo }}[<a href="{{ .Site.Params.commit }}{{ .GitInfo.Hash }}">{{ substr .GitInfo.Hash 0 8 }}</a>]{{ end }}
+          Powered by <a href="https://gohugo.io">Hugo v{{ .Site.Hugo.Version }}</a> using the <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a>
+		  
         </p>
     {{ if not (in (slice "docs" "updates") .Type) }}
     <span class="float-right" aria-hidden="true">
@@ -33,5 +32,7 @@
       </a>
     </span>
     {{ end }}
+	
+	
   </p>
 </footer>
